--- a/product-microservice-dev.properties
+++ b/product-microservice-dev.properties
@@ -1,2 +1,3 @@
-product.property=Product Profile Dev
-app.testProp=Property of test Updated for Bus and Message Broker
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=prueba
