--- a/product-microservice-dev.properties
+++ b/product-microservice-dev.properties
@@ -1,4 +1,4 @@
 stock.property=Product Profile Dev Updated
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
-spring.data.mongodb.database=prueba
+spring.data.mongodb.database=parameters
