--- a/parameters-microservice-dev.properties
+++ b/parameters-microservice-dev.properties
@@ -1,4 +1,4 @@
 stock.property=Parameters Profile Dev Updated
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
-spring.data.mongodb.database=parameters1
+spring.data.mongodb.database=parameters
